2011-10-16  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>

	* src/mainframe.cpp: Adjust simple mode's behavior not to hide menu
	bar.
	* src/mainframe.cpp: Add <Ctrl>Q as hotkey to quit program.

2011-07-09  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>

	* Makefile.am,
	data/Makefile.am,
	data/pcmanx.png,
	data/pcmanx.svg: Adopting new icon design. (Fixes issue 33)
	* NEWS,
	src/pcmanx_inverse_xpm.xpm,
	src/pcmanx_xpm.xpm: Adopting new icon design. (Fixes issue 33)
	* src/conn_xpm.xpm,
	src/mainframe.cpp,
	src/pcmanx_inverse_xpm.xpm,
	src/pcmanx_xpm.xpm: Fix compilation error.

2011-06-29  Jim Huang  <jserv@0xlab.org>

	* src/pcmanx_gtk2.cpp (main): Set program name to make gnome-shell
	happy, which seems to obtain the name from argv[0] instead of Gtk+
	properties.
	Close issue #41

2011-06-29  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>

	* NEWS: fontconfig fallback font support.
	* src/core/cfontconfig.cpp,
	src/core/cfontconfig.h: Improve the algorithm of fontconfig fallback font.
	* src/core/cfontconfig.cpp: Avoid memory leak.

2011-06-28  Jim Huang  <jserv@0xlab.org>

	* NEWS,
	README: Mozilla/Firefox Plugin support was removed, and the
	documentation should be reflected as well.

2011-06-28  Jim Huang  <jserv@0xlab.org>

	* src/core/uao250.c,
	src/core/uao250.h,
	src/core/uao241.c,
	src/core/uao241.h,
	src/core/uao.c,
	src/core/uao.h: Move to src/charset to simplify libpcmanx_core

	* src/charset: Implement UAO routines.

	* src/core/Makefile.am,
	src/Makefile.am,
	configure.ac: Ditto.

2011-06-28  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>

	* build/snapshot-deb.sh: Use "3.0 (quilt)" as the package source format.

2011-06-27  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>

	* src/core/Makefile.am,
	src/core/cfontconfig.cpp,
	src/core/cfontconfig.h,
	src/core/font.cpp,
	src/core/termview.cpp: Add fontconfig fallback font support.

2011-06-23  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>

	* src/core/Makefile.am,