@@ -309,7 +309,8 @@ GtkActionEntry CMainFrame::m_ActionEntries[] =
 #ifdef USE_WGET
     {"update_bbs_list", GTK_STOCK_REFRESH, _("_Update BBS List"), NULL, _("Update BBS List"), G_CALLBACK (CMainFrame::updateBBSList)},
 #endif
-    {"new_con", GTK_STOCK_NETWORK, _("_New Connection"), "<Alt>Q", _("New Connection"), G_CALLBACK (CMainFrame::OnNewCon)},
+    {"new_con1", GTK_STOCK_NETWORK, _("_New Connection"), "<Alt>Q", _("New Connection"), G_CALLBACK (CMainFrame::OnNewCon)},
+    {"new_con2", GTK_STOCK_NETWORK, _("_New Connection"), "<Ctrl>N", _("New Connection"), G_CALLBACK (CMainFrame::OnNewCon)},
     {"reconnect", GTK_STOCK_UNDO, _("_Reconnect"), "<Alt>R", _("Reconnect"), G_CALLBACK (CMainFrame::OnReconnect)},
     {"reconnect1",GTK_STOCK_UNDO, _("_Reconnect"), "<Ctrl>Insert", _("Reconnect"), G_CALLBACK(CMainFrame::OnReconnect)},
     {"close", GTK_STOCK_CLOSE, _("_Close Connection"), "<Alt>W", _("Close Connection"), G_CALLBACK (CMainFrame::OnCloseCon)},
@@ -328,7 +329,7 @@ GtkActionEntry CMainFrame::m_ActionEntries[] =
     {"paste", GTK_STOCK_PASTE, _("_Paste"), "<Alt>P", _("Paste"), G_CALLBACK (CMainFrame::OnPaste)},
     {"paste_from_clipboard", GTK_STOCK_PASTE, _("Paste from Clipboard"), "<Shift>Insert", NULL, G_CALLBACK (CMainFrame::pasteFromClipboard)},
     {"down_article", GTK_STOCK_SELECT_ALL, _("_Download Article"), NULL, _("Download Article"), G_CALLBACK (CMainFrame::OnDownArticle)},
-    {"select_all", NULL, _("Select A_ll"), NULL, NULL, G_CALLBACK (CMainFrame::OnSelectAll)},
+    {"select_all", NULL, _("Select A_ll"), "", NULL, G_CALLBACK (CMainFrame::OnSelectAll)},
     {"emoticon", NULL, _("_Emoticons"), "<Ctrl>Return", NULL, G_CALLBACK (CMainFrame::OnEmoticons)},
     {"preference", GTK_STOCK_PREFERENCES, _("_Preference"), NULL, _("Preference"), G_CALLBACK (CMainFrame::OnPreference)},
     {"favorites_menu", NULL, _("F_avorites"), NULL, NULL, NULL},
@@ -379,7 +380,7 @@ static const char *ui_info =
 #ifdef USE_WGET
   "      <menuitem action='update_bbs_list'/>"
 #endif
-  "      <menuitem action='new_con'/>"
+  "      <menuitem action='new_con1'/>"
   "      <menuitem action='reconnect'/>"
   "      <menuitem action='close'/>"
   "      <separator/>"
@@ -435,7 +436,7 @@ static const char *ui_info =
   "  <toolbar>"
   "    <separator/>"
   "    <toolitem action='site_list'/>"
-  "    <toolitem action='new_con'/>"
+  "    <toolitem action='new_con1'/>"
   "    <toolitem action='reconnect'/>"
   "    <toolitem action='close'/>"
   "    <separator/>"
@@ -472,6 +473,7 @@ static const char *ui_info =
 #endif
 
   // alternative accelerators
+  " <accelerator action='new_con2'/>"
   " <accelerator action='close2'/>"
   " <accelerator action='reconnect1'/>"
   " <accelerator action='next_con1'/>"
