@@ -3,6 +3,7 @@
 	* src/mainframe.cpp: Adjust simple mode's behavior not to hide menu
 	bar.
 	* src/mainframe.cpp: Add <Ctrl>Q as hotkey to quit program.
+	* src/mainframe.cpp: Add <Ctrl>N as hotkey to open new connection.
 
 2011-07-09  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>
 
